fix: fix formatting issue on mobile

--- a/posts/video.css
+++ b/posts/video.css
@@ -65,4 +65,8 @@ height: 200px;
 width: 300px;
 right: 40px;
 } 
+
+.posts {
+display: none;
+}
 }
